Styled countdown with fix to stop jumping around every second

--- a/src/css/components/_nav.scss
+++ b/src/css/components/_nav.scss
@@ -22,7 +22,7 @@ nav {
     }
     a {
         display: block;
-        padding:20px;
+        padding:20px 10px;
         &:hover,
         &:focus {
             background:$white;
